# slint-template

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/system/: bar_system.rs  mod.rs
src/system/notify/: mod.rs
src/system/tray/: mod.rs  tray_menu.rs
ui/: Main.slint  Theme.slint
ui/components/system/: Bar.slint  Right_menu.slint  Win.slint
ui/model/system/: System_global.slint
ui/widgets/: FFButton.slint
