[package]
name = "slint-template-custom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.2.0",features = ["log"]}
i-slint-backend-winit = "1.2.0"
winit = "0.28.6"
log = "0.4.20"


[build-dependencies]
slint-build = "1.2.0"