[package]
name = "slint-template-custom"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = {version = "1.2.0",features = ["log"]}
i-slint-backend-winit = "1.2.0"
winit = "0.28.6"
notify-rust = "4.9.0"
tokio ={ version = "1",features = ["sync","rt-multi-thread","macros","time"]}
tray-icon = "0.9"
once_cell = "1.18.0"

[build-dependencies]
slint-build = "1.2.0"